--- a/fold_change_correlation_unipept_metagomics.Rmd
+++ b/fold_change_correlation_unipept_metagomics.Rmd
@@ -17,7 +17,7 @@ uni1_df <- read.csv(uni1_fp,
          uni1_go_bp = GO..biological.process.,
          uni1_go_mf = GO..molecular.function.,
          uni1_go_cc = GO..cellular.component.)
-uni1_df
+#uni1_df
 
 uni2_df <- read.csv(uni2_fp,
          sep = ",", comment.char="", header = TRUE, stringsAsFactors = FALSE) %>%
@@ -25,13 +25,14 @@ uni2_df <- read.csv(uni2_fp,
          uni2_go_bp = GO..biological.process.,
          uni2_go_mf = GO..molecular.function.,
          uni2_go_cc = GO..cellular.component.)
-uni2_df
+#uni2_df
 
 mgo_df <- read.csv(mgo_fp,
          sep = "\t", comment.char="#", header = TRUE, stringsAsFactors = FALSE) %>%
-   select(mgo_go = GO.acc,
-         mgo_fc = Log.2..fold.change)
-#mgo_df
+   select(go_term = GO.acc,
+         mgo_fold_change = Log.2..fold.change) %>%
+   filter(mgo_fold_change != 'null')
+mgo_df
 
 ```
 We need to estimate the fold change of unipept.
@@ -61,7 +62,6 @@ uni_peptides_df <- plyr::join_all(list(uni1_df, uni2_df), by = "peptide") %>%
 library(stringr)
 go_regex <- "(GO:[0-9]+) \\(([0-9]+)%\\)"
 go_terms_fc <- data.frame();
-print(uni_peptides_df);
 x <- 1;
 for (i in 1:nrow(uni_peptides_df)){
     #print(uni_peptides_df[i,]$uni1_go_bp)
@@ -74,10 +74,10 @@ for (i in 1:nrow(uni_peptides_df)){
     #}
     for (n in 1:nrow(go_terms)){
       if (nrow(go_terms) != 0) {
-        # Filter out GO terms present in less than 5% of the protein
+        # Filter out GO terms present in less than 5% of the protein˙
         if (as.double(go_terms[n,3]) > 5 && !is.na(uni_peptides_df[i,"uni_est_fc"])){
           go_terms_fc[x, "go_term"] <- go_terms[n,2]
-          go_terms_fc[x, "fold_change"] <- uni_peptides_df[i,"uni_est_fc"]
+          go_terms_fc[x, "uni_fold_change"] <- uni_peptides_df[i,"uni_est_fc"]
           x = x + 1;
         }
       }
@@ -91,30 +91,15 @@ for (i in 1:nrow(uni_peptides_df)){
 go_terms_fc
 ```
 
-
-
+Let's join the lists and plot the correlation plot
 
 ```{r}
-n <- 1
-#uni1_counts <- data.frame(peptides = numeric(length(100)),
-                          #counts = );
-for (i in 1:nrow(uni1_df)){
-  if (i <= 300){
-    if (i > 1){
-      if (uni1_df[i,'peptide'] == uni1_df[i-1,'peptide'] && 
-          uni1_df[i,'uni_go_bp'] == uni1_df[i-1,'uni_go_bp'] &&
-          uni1_df[i,'uni_go_mf'] == uni1_df[i-1,'uni_go_mf'] &&
-          uni1_df[i,'uni_go_cc'] == uni1_df[i-1,'uni_go_cc']){
-            n = n + 1;
-      } else {
-        print(uni1_df[i-1,'peptide']);
-        print(n);
-        #uni1_counts['peptide'] = uni1_df[i-1,'peptide'];
-        n = 1;
-      }
-    }
-  }
-}
-uni1_counts
+go_fcs <- plyr::join_all(list(go_terms_fc, mgo_df), by = "go_term")
+#go_fcs
+plot(go_fcs$uni_fold_change, go_fcs$mgo_fold_change, main="Fold Change Correlation",
+     xlab = "Unipept Log2 Ratio", ylab = "MetaGOmics Log2 Ratio")
 ```
+
+
+
 
